create pricing.js and added new enpoint to pricing penalties
